--- a/css/style.css
+++ b/css/style.css
@@ -477,3 +477,9 @@ header {
     margin-left: auto;
     margin-right: auto;
 }
+
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
