--- a/css/style.css
+++ b/css/style.css
@@ -476,23 +476,43 @@ header {
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
+body {
+  height: 5000px;
+  background: linear-gradient(#00ff04, #09aad3);
+}
 
-#myBtn {
-  display: none;
+.back-to-top {
   position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
+  right: 2rem;
+  bottom: 2rem;
+  border-radius: 100%;
+  background: #141c38;
+  padding: 0.5rem;
   border: none;
-  outline: none;
-  background-color: red;
-  color: white;
   cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
+  opacity: 100%;
+  transition: opacity 0.5s;
 }
 
-#myBtn:hover {
-  background-color: #555;
+.back-to-top:hover {
+  opacity: 60%;
 }
+
+.hidden {
+  opacity: 0%;
+}
+
+.back-to-top-icon {
+  width: 1rem;
+  height: 1rem;
+  color: #7ac9f9;
+}
+
+.progress-bar {
+  height: 1rem;
+  background: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
