--- a/css/style.css
+++ b/css/style.css
@@ -481,38 +481,17 @@ body {
   background: linear-gradient(#00ff04, #09aad3);
 }
 
-.back-to-top {
-  position: fixed;
-  right: 2rem;
-  bottom: 2rem;
-  border-radius: 100%;
-  background: #141c38;
-  padding: 0.5rem;
-  border: none;
-  cursor: pointer;
-  opacity: 100%;
-  transition: opacity 0.5s;
+.top {
+  text-decoration: none;
+  padding: 10px;
+  font-family: sans-serif;
+  color: #fff;
+  background: #000;
+  border-radius: 100px;
 }
 
-.back-to-top:hover {
-  opacity: 60%;
-}
-
-.hidden {
-  opacity: 0%;
-}
-
-.back-to-top-icon {
-  width: 1rem;
-  height: 1rem;
-  color: #7ac9f9;
-}
-
-.progress-bar {
-  height: 1rem;
-  background: white;
-  position: fixed;
-  top: 0;
-  left: 0;
+.top {
+  position: sticky;
+  bottom: 20px; 
 }
 
