--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,22 @@ header {
 }
 
 
-
+.top {
+  place-self:end;
+  position:sticky;
+  bottom:20px;
+  margin-right:20px;
+  margin-top:100vh;
+  
+  /* visual styling */
+  text-decoration: none;
+  padding: 10px;
+  font-family: sans-serif;
+  color: #fff;
+  background: #000;
+  border-radius: 100px;
+  white-space:nowrap;
+}
 
 
 
@@ -479,19 +494,5 @@ header {
 body {
   height: 5000px;
   background: linear-gradient(#00ff04, #09aad3);
-}
-
-.top {
-  text-decoration: none;
-  padding: 10px;
-  font-family: sans-serif;
-  color: #fff;
-  background: #000;
-  border-radius: 100px;
-}
-
-.top {
-  position: sticky;
-  bottom: 20px; 
 }
 
