--- a/css/style.css
+++ b/css/style.css
@@ -90,11 +90,15 @@ strong { font-weight: var(--fw-bold) }
 }
 
 
+body {
+  display: grid;
+  grid-template-columns: auto auto; 
+}
+
 .top {
   place-self:end;
   position:sticky;
   bottom:20px;
-  margin-right:20px;
   margin-top:100vh;
   
   /* visual styling */
@@ -104,8 +108,13 @@ strong { font-weight: var(--fw-bold) }
   color: #fff;
   background: #000;
   border-radius: 100px;
-  white-space:nowrap;
 }
+
+p {
+  font-size: 25px;
+}
+
+
 
 /* Typography */
 
