--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,9 @@
 /* General styles */
 
 /* endable this to add smooth scrolling */
-html {
+/* html {
     scroll-behavior: smooth;
-}
+} */
 
 
 body {
@@ -90,7 +90,7 @@ strong { font-weight: var(--fw-bold) }
 }
 
 .top {
-  place-self:end;
+  place-self:right;
   position:sticky;
   bottom:20px;
   margin-top:100vh;
